[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
hyper = { version = "1", features = ["full"] }
lambda_http = "0.8"
lambda_runtime = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-rustls", "chrono", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "4", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
testfixtures = { version = "0.1", features = ["mysql"] }
thiserror = "1"
async-trait = "0.1"

# S3 Dependencies
aws-config = "1"
aws-sdk-s3 = "1"
aws-sdk-sqs = "1"
