[package]
name = "filemanager"
description = "Orcabus filemanager"
version = "0.1.0"
authors = ["Marko Malenic <mmalenic1@gmail.com", "Roman Valls Guimera <brainstorm@nopcode.org>"]
edition = "2021"

[dependencies]
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
utoipa = { version = "3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
testfixtures = { version = "0.1.2", features = ["mysql"] }
thiserror = "1.0"
async-trait = "0.1"

# AWS
aws-sdk-sqs = "0.29"
aws-config = "0.56"
aws-sdk-s3 = "0.29"
futures = "0.3.28"
#lambda_http = "0.8.0"
#lambda_runtime = "0.8.0"