[package]
name = "filemanager-http-lambda"
description = "This crate is a lambda function which runs the filemanager api endpoints"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
lambda_http = "0.8"
lambda_runtime = "0.8"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

axum = "0.6"
serde_json = "1.0"

filemanager = { path = "../filemanager" }
