[package]
name = "filemanager"
description = "Orcabus filemanager"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
axum = "0.6"
hyper = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono", "uuid"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "4", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "1.0"
async-trait = "0.1"
uuid = { version = "1.4", features = ["v4"] }
mockall = "0.12"
mockall_double = "0.3"

# AWS
aws-sdk-sqs = "0.37"
aws-config = "0.100"
aws-sdk-s3 = "0.37"
futures = "0.3"
#lambda_http = "0.8.0"
#lambda_runtime = "0.8.0"

[dev-dependencies]
aws-smithy-runtime-api = "0.100"