[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "bssh_manager_tools"
version = "0.0.1"
description = "BSSH Manager Lambda Layers"
readme = "Readme.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "libica",
    "mypy-boto3-ssm",
    "mypy-boto3-secretsmanager",
    "boto3",
    "verboselogs"
]

[[project.authors]]
name = "Alexis Lucattini"
email = "alexis.lucattini@umccr.org"

[project.urls]
Homepage = "https://github.com/umccr/orcabus"
"Bug Tracker" = "https://github.com/umccr/orcabus/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]
build = [
    "build"
]

