[package]
name = "filemanager-ingest-lambda"
description = "This crate is a lambda function which ingests events from sqs"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
aws_lambda_events = "0.12"
lambda_runtime = "0.8"
serde = "1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

filemanager = { path = "../filemanager" }
serde_json = "1"

aws-config = "1"
aws-sdk-sts = "1"