[package]
name = "filemanager-migrate-lambda"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

aws_lambda_events = "0.15"
lambda_runtime = "0.10"

filemanager = { path = "../filemanager", features = ["migrate"] }