[package]
name = "filemanager"
description = "Orcabus filemanager"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]

migrate = ["sqlx/migrate"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono", "uuid"] }

async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"

chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "1.0"
uuid = { version = "1.7", features = ["v7"] }
mockall = "0.12"
mockall_double = "0.3"
itertools = "0.12"

# AWS
aws-sdk-sqs = "1"
aws-config = "1"
aws-sdk-s3 = "1"
lambda_runtime = "0.8"
aws_lambda_events = "0.12"

[dev-dependencies]
lazy_static = "1.4"

aws-smithy-runtime-api = "1"

# The migrate feature is required to run sqlx tests
filemanager = { path = ".", features = ["migrate"] }