[workspace]
resolver = "2"

members = [
    "filemanager",
    "filemanager-api",
    "filemanager-http-lambda",
    "filemanager-ingest-lambda",
    "filemanager-migrate-lambda"
]

[workspace.package]
license = "MIT"
edition = "2021"
authors = ["Marko Malenic <mmalenic1@gmail.com>", "Roman Valls Guimera <brainstorm@nopcode.org>"]
rust-version = "1.74"
