[package]
name = "filemanager-api-server"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros"] }
tracing = "0.1"
axum = "0.8"
dotenvy = "0.15"
http = "1"
clap = { version = "4", features = ["derive", "env"] }
sea-orm = { version = "1.1.2", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls"] }

filemanager = { path = "../filemanager", features = ["migrate"] }
