[package]
name = "filemanager-build"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = "1"
clap_builder = "4"
envy = "0.4"
sea-orm-cli = { version = "0.12", default-features = false, features = ["cli", "codegen", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
miette = "7"
serde = { version = "1", features = ["derive"] }
quote = "1"
syn = { version = "2", features = ["full", "extra-traits", "visit-mut"] }
prettyplease = "0.2"
heck = "0.5"
