[package]
name = "filemanager-ingest-lambda"
description = "This crate is a lambda function which ingests events from sqs"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { version = "1", features = ["macros"] }

aws_lambda_events = "0.15"
lambda_runtime = "0.13"

filemanager = { path = "../filemanager" }
