[package]
name = "filemanager-inventory-lambda"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }

lambda_runtime = "0.13"

filemanager = { path = "../filemanager", features = ["migrate"] }

[dev-dependencies]
serde_json = "1"
aws-sdk-s3 = "1"
