[package]
name = "filemanager-migrate-lambda"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1" }

aws_lambda_events = "0.15"
lambda_runtime = "0.12"

filemanager = { path = "../filemanager", features = ["migrate"] }

[dev-dependencies]

serde_json = "1.0"
