[package]
name = "filemanager"
description = "Orcabus filemanager"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]

migrate = ["sqlx/migrate"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono", "uuid"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
uuid = { version = "1", features = ["v7"] }
mockall = "0.12"
mockall_double = "0.3"
itertools = "0.12"
url = "2"
csv = "1"
flate2 = "1"
md5 = "0.7"
hex = "0.4"
parquet = { version = "50", features = ["async"] }
arrow = { version = "50", features = ["chrono-tz"] }
arrow-json = "50"
orc-rust = "0.3"
bytes = "1.6"

aws-sdk-sqs = "1"
aws-config = "1"
aws-sdk-s3 = "1"
aws-credential-types = "1"
aws-sigv4 = "1"
aws-arn = "0.3"
lambda_runtime = "0.11"
aws_lambda_events = "0.15"

[dev-dependencies]
lazy_static = "1"

aws-smithy-runtime-api = "1"
aws-smithy-mocks-experimental = "0.2"
aws-sdk-s3 = { version = "1", features = ["test-util"] }

# The migrate feature is required to run sqlx tests
filemanager = { path = ".", features = ["migrate"] }

[build-dependencies]
filemanager-build = { path = "../filemanager-build" }
miette = { version = "7", features = ["fancy"] }
tokio = { version = "1", features = ["macros"] }
dotenvy = "0.15"
