[package]
name = "filemanager"
description = "The orcabus filemanager ingests cloud storage event records and allows querying them."
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]

migrate = ["sqlx/migrate"]

[dependencies]
# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

# Async
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json", "ansi"] }

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono", "uuid"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "sea-orm-internal"] }
strum = { version = "0.26", features = ["derive"] }

# Query server
axum = "0.7"
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
serde_qs = { version = "0.13", features = ["axum"] }
json-patch = "2"

# General
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
uuid = { version = "1", features = ["v7"] }
mockall = "0.13"
mockall_double = "0.3"
itertools = "0.13"
url = "2"
bytes = "1.6"
envy = "0.4"
rand = "0.8"

# Inventory
csv = "1"
flate2 = "1"
md5 = "0.7"
hex = "0.4"
parquet = { version = "52", features = ["async"] }
arrow = { version = "52", features = ["chrono-tz"] }
arrow-json = "52"
orc-rust = "0.3"

# AWS
aws-sdk-sqs = "1"
aws-config = "1"
aws-sdk-s3 = "1"
aws-credential-types = "1"
aws-sigv4 = "1"
aws-arn = "0.3"
aws_lambda_events = "0.15"

[dev-dependencies]
lazy_static = "1"

aws-smithy-runtime-api = "1"
aws-smithy-mocks-experimental = "0.2"
aws-sdk-s3 = { version = "1", features = ["test-util"] }

# The migrate feature is required to run sqlx tests
filemanager = { path = ".", features = ["migrate"] }

[build-dependencies]
filemanager-build = { path = "../filemanager-build" }
miette = { version = "7", features = ["fancy"] }
tokio = { version = "1", features = ["macros"] }
dotenvy = "0.15"
