[package]
name = "filemanager"
description = "The orcabus filemanager ingests cloud storage event records and allows querying them."
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]

migrate = ["sqlx/migrate"]

[dependencies]
# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["chrono"] }

# Async
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json", "ansi", "env-filter"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls", "chrono", "uuid", "macros"] }
sea-orm = { version = "1.1", default-features = false, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-json",
    "with-uuid",
    "with-chrono"
] }
strum = { version = "0.26", features = ["derive"] }

# Query server
axum = { version = "0.8", features = ["original-uri"] }
axum-extra = "0.10"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid", "url"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "debug-embed", "url"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
serde_qs = { version = "0.14", features = ["axum"] }
json-patch = "3"

# General
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v7"] }
mockall = "0.13"
mockall_double = "0.3"
itertools = "0.13"
url = { version = "2", features = ["serde"] }
envy = "0.4"
rand = "0.8"
parse-size = "1"
humantime = "2"
percent-encoding = "2"
base64 = "0.22"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

# Inventory
csv = "1"
flate2 = "1"
md5 = "0.7"
hex = "0.4"
parquet = { version = "53", features = ["async"] }
arrow = { version = "53", features = ["chrono-tz"] }
arrow-json = "53"
orc-rust = "0.5"

# AWS
aws-sdk-sqs = "1"
aws-config = "1"
aws-sdk-s3 = "1"
aws-credential-types = "1"
aws-sigv4 = "1"
aws-arn = "0.3"
aws_lambda_events = "0.15"
aws-sdk-secretsmanager = "1"
aws_secretsmanager_caching = "1"

[dev-dependencies]
lazy_static = "1"

aws-smithy-runtime-api = "1"
aws-smithy-mocks-experimental = "0.2"
aws-sdk-s3 = { version = "1", features = ["test-util"] }
aws-sdk-sqs = { version = "1", features = ["test-util"] }
aws-sdk-secretsmanager = { version = "1", features = ["test-util"] }

# The migrate feature is required to run sqlx tests
filemanager = { path = ".", features = ["migrate"] }

[build-dependencies]
tokio = { version = "1", features = ["macros"] }
